--- a/demo3-spring/src/main/resources/application.properties
+++ b/demo3-spring/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=demo3-Thymeleaf
-##Kết nối SQL Server
-spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=SpringBootLoginRole;;encrypt=false;trustServerCertificate=true;sslProtocol=TLSv1.2;characterEncoding=UTF-8
-spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt_springboot3
+spring.datasource.username=root
+spring.datasource.password=12345
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql = true
 ## Hibernate Properties
