--- a/demo02-spring/pom.xml
+++ b/demo02-spring/pom.xml
@@ -39,6 +39,10 @@
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
 		</dependency>
 		<dependency>
+			 <groupId>com.mysql</groupId>
+			 <artifactId>mysql-connector-j</artifactId>
+		 </dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
