--- a/demo02-spring/src/main/resources/application.properties
+++ b/demo02-spring/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=demo02-spring
 
-spring.datasource.url=jdbc:mysql://localhost:3306/springb3_security6
-spring.datasource.username= security_su
-spring.datasource.password=1234567@a$
+spring.datasource.url=jdbc:mysql://localhost:3306/jwt_springboot3
+spring.datasource.username=root
+spring.datasource.password=12345
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
